<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <include
            layout="@layout/toolbar"
            android:id="@+id/toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:id="@+id/scrollView">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:orientation="horizontal"
                android:id="@+id/linear1"
                android:layout_marginTop="20dp">

               <Button
                   android:layout_width="130dp"
                   android:layout_height="130dp"
                   android:text="@string/physician"
                   android:gravity="bottom"
                   android:id="@+id/physicianBtn"
                   android:textAllCaps="false"
                   android:textSize="20sp"
                   android:textAlignment="center"
                   android:layout_marginStart="20dp"
                   android:background="@drawable/physician"/>

                <Button
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:id="@+id/dermBtn"
                    android:background="@drawable/dermatologist"
                    android:layout_marginStart="20dp"
                    android:textSize="15sp"
                    android:layout_marginBottom="50dp"
                    android:paddingTop="110dp"
                    android:gravity="start|fill_vertical"
                    android:text="@string/dermatologist"
                    android:textAllCaps="false"
                   android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_below="@id/linear1"
                android:id="@+id/linear2"
                android:orientation="horizontal">

                <Button
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:id="@+id/pedBtn"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/pedetrician"
                    android:text="@string/pededtrician"
                    style="?android:attr/borderlessButtonStyle"
                    android:textAllCaps="false"
                    android:gravity="bottom"
                    android:textSize="20sp"
                    />
                <Button
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:paddingTop="110dp"
                    android:id="@+id/psychoBtn"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/psychiatrist"
                    android:text="@string/psychiatrist"
                    android:gravity="bottom"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textAllCaps="false"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/linear2"
                android:orientation="horizontal">

                <Button
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:id="@+id/dentBtn"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/dentist"
                    android:text="@string/dentist"
                    android:gravity="bottom"
                    android:textSize="20sp"
                    android:textAllCaps="false"
                    android:textAlignment="center"/>
                <Button
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:paddingTop="110dp"
                    android:id="@+id/orthoBtn"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/orthopedecian"
                    android:text="@string/orthopedician"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:textAlignment="center"/>

            </LinearLayout>
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
